[gd_scene load_steps=6 format=3 uid="uid://6sjp3tqy5fwl"]

[ext_resource type="Script" path="res://Assets/Fan/fan.gd" id="1_ivyor"]
[ext_resource type="SpriteFrames" uid="uid://ffnxax42627g" path="res://Assets/Fan/fan.tres" id="1_p7dpi"]
[ext_resource type="Texture2D" uid="uid://c3hke2hc2u0q4" path="res://aseprite/wind.png" id="3_hr0d1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbvwe"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jeses"]
particle_flag_disable_z = true
angle_min = 90.0
angle_max = 90.0
spread = 2.45403
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)

[node name="Fan" type="Node2D"]
script = ExtResource("1_ivyor")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_p7dpi")
animation = &"fan_spinning"
autoplay = "fan_spinning"

[node name="WindArea" type="Area2D" parent="."]
collision_mask = 2147483648

[node name="WindAreaShape" type="CollisionShape2D" parent="WindArea"]
position = Vector2(100, 0)
scale = Vector2(10, 3)
shape = SubResource("RectangleShape2D_gbvwe")

[node name="FanParticles" type="GPUParticles2D" parent="WindArea"]
rotation = -0.00148797
amount = 32
process_material = SubResource("ParticleProcessMaterial_jeses")
texture = ExtResource("3_hr0d1")
lifetime = 20.0
visibility_rect = Rect2(-100, -100, 400, 100)

[connection signal="body_entered" from="WindArea" to="." method="_on_wind_area_body_entered"]
[connection signal="body_exited" from="WindArea" to="." method="_on_wind_area_body_exited"]
